src/pages/Main/components/Intro.scss
.intro {
  &__banner {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    height: 600px;
    padding: 40px 56px;
    border-radius: 24px;
    background: $secondary-liner;
  }

  &__text-container {
    align-self: flex-start;
  }

  &__promo-text {
    @include GolosRegular(
      clamp(12px, calc(12px + (16 - 12) * (100vw - 360px) / (1560 - 360)), 16px),
      100%,
      $grayscale-50
    );
  }

  &__header {
    width: 40%;
    margin-top: 24px;
    @include GolosMedium(
      clamp(26px, calc(26px + (60 - 26) * (100vw - 360px) / (1560 - 360)), 60px),
      110%,
      $grayscale-50
    );
  }

  &__image-container {
    width: 50%;
    height: 100%;
    display: flex;
    align-items: flex-end;
    justify-content: flex-end;
    position: relative;
    background-image: url('@/assets/images/svg/intro-decor.svg');
    background-size: 80% 80%;
    background-repeat: no-repeat;
    background-position: center;
  }

  &__image {
    width: 100%;
    min-width: 180px;
    position: absolute;
    right: 0;
    bottom: 0;
  }

  &__cards-block {
    display: flex;
    gap: 16px;
    margin-top: 16px;
  }

  @media screen and (max-width: $large-desktop) {
    &__banner {
      height: calc(240px + (600 - 240) * (100vw - 360px) / (1559.9 - 360));
    }
  }

  @media screen and (max-width: $tablet) {
    &__banner {
      padding: 16px;
      border-radius: 12px;
    }

    &__header {
      margin-top: 8px;
    }

    &__cards-block {
      gap: 8px;
      margin-top: 8px;
    }
  }
}

